Fixed horizontal scrolling at phones resolutions

--- a/src/components/sections/WelcomeSection/WelcomeSection.module.scss
+++ b/src/components/sections/WelcomeSection/WelcomeSection.module.scss
@@ -66,7 +66,7 @@
 
 @media (max-width: 992px) {
   .backgroundImage {
-    width: 100%;
+    max-width: 100%;
     background: rgba(0, 0, 0, 0.55)
       url(https://i.postimg.cc/PJ5G8WPq/main-photo-smaller.png);
     background-blend-mode: darken;
