--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: $font-second;
-  font-weight: 500;
+  overflow-x: hidden;
 }
 
 h1,
@@ -21,4 +21,28 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+@media (max-width: 768px) {
+  body {
+    max-width: 768px;
+    margin: 0 auto;
+    overflow-x: hidden;
+  }
+}
+
+@media (max-width: 992px) {
+  body {
+    max-width: 970px;
+    margin: 0 auto;
+    overflow-x: hidden;
+  }
+}
+
+@media (max-width: 1200px) {
+  body {
+    max-width: 1170px;
+    margin: 0 auto;
+    overflow-x: hidden;
+  }
 }
